fixed social icon spacing, fixed social icon code in header

--- a/src/components/login.css
+++ b/src/components/login.css
@@ -96,6 +96,8 @@
  
   .social-icons {
     margin-right: 7%;
+    margin-top: 1%;
+    margin-left: 7%;
   }
 
 
